2021-10-27 Roy Hills <royhills@hotmail.com>

	* arp-fingerprint.1, arp-scan.1, get-iab.1, get-oui.1, mac-vendor.5:
	  Standardised man page fonts, corrected some inaccuracies and removed
	  author section.

	* Updated ieee-oui.txt and ieee-iab.txt files.

2021-10-25 Roy Hills <royhills@hotmail.com>

	* format.c: New file containing output format functions.

	* Makefile.am: Added format.c source file to arp_scan_SOURCES

	* utils.c: Added name_to_id() and str_ccmp() functions.

	* arp-scan.c, arp-scan.h, arp-scan.1: Add --format option and output
	  fields processing code.

2021-10-24 Roy Hills <royhills@hotmail.com>

	* Makefile.am, check-decode: Added checks to test output format with
	  --rtt, --resolve, different ARP/header address, and locally
	  administered MAC address.

	* pkt-diff-frame-addr.pcap, pkt-local-admin.pcap: New files for
	  above tests.

2021-10-23 Roy Hills <royhills@hotmail.com>

	* arp-scan.c, error.c arp-scan.c, error.c: Changed most fixed-length
	  strings to use dynamic length strings.

	* utils.c: Changed make_message() to assume vsnprintf() behaves
	  according to POSIX. No need to accomodate bugs in ancient glibc
	  versions.

2021-10-09 Roy Hills <royhills@hotmail.com>

	* arp-scan.c: Added POSIX.1e capabilities support.

	* configure.ac, acinclude.m4: Add autoconf tests for Linux libcap
	  POSIX.1e capabilities support. Incremented version to 1.9.9 to
	  reflect addition of POSIX.1e capabilities support.

	* utils.c, arp-scan.h: New functions limit_capabilities() to limit the
	  permitted capabilities, set_capability() to enable and disable
	  capabilities, and drop_capabilities() to permanently drop all
	  capabilities. These functions use libcap if POSIX.1e capabilities
	  are supported otherwise they fall back to setuid() and seteuid().

2022-10-08 Roy Hills <royhills@hotmail.com>

	* Tagged as 1.9.8

	* arp-scan.c: fix bug reported by mrquincle where ARP responses for
	  a host that had timed out was being incorrectly flagged as a