@@ -16,4 +16,10 @@ arp_scan_LDADD = $(LIBOBJS)
 dist_pkgdata_DATA = ieee-oui.txt ieee-iab.txt mac-vendor.txt
 #
 TESTS = $(dist_check_SCRIPTS)
-EXTRA_DIST = pkt-simple-request.dat pkt-custom-request.dat pkt-custom-request-padding.dat pkt-custom-request-llc.dat pkt-custom-request-vlan.dat pkt-simple-response.pcap pkt-padding-response.pcap pkt-vlan-response.pcap pkt-llc-response.pcap pkt-net1921681-response.pcap pkt-trailer-response.pcap pkt-vlan-llc-response.pcap pkt-custom-request-vlan-llc.dat pkt-dup-response.pcap pkt-diff-frame-addr.pcap pkt-local-admin.pcap
+EXTRA_DIST = arp-scan.1.dist pkt-simple-request.dat pkt-custom-request.dat pkt-custom-request-padding.dat pkt-custom-request-llc.dat pkt-custom-request-vlan.dat pkt-simple-response.pcap pkt-padding-response.pcap pkt-vlan-response.pcap pkt-llc-response.pcap pkt-net1921681-response.pcap pkt-trailer-response.pcap pkt-vlan-llc-response.pcap pkt-custom-request-vlan-llc.dat pkt-dup-response.pcap pkt-diff-frame-addr.pcap pkt-local-admin.pcap
+#
+CLEANFILES = arp-scan.1
+#
+do_subst = sed -e 's,[@]pkgdatadir[@],$(pkgdatadir),g'
+arp-scan.1: arp-scan.1.dist Makefile
+	$(do_subst) < $(srcdir)/arp-scan.1.dist > arp-scan.1
